Add all-books menu item

--- a/views/include/menu.mustache
+++ b/views/include/menu.mustache
@@ -28,6 +28,12 @@
                     <span class="ml-3 item-text">Paths</span>
                 </a>
             </li>
+            <li class="nav-item dropdown {{activeAllBooks}}">
+                <a href="/all-books" class="nav-link">
+                    <i class="fe fe-book-open fe-16"></i>
+                    <span class="ml-3 item-text">All Books</span>
+                </a>
+            </li>
         </ul>
 
         <div class="btn-box w-100 mt-4 mb-1">
