--- a/views/include/menu.mustache
+++ b/views/include/menu.mustache
@@ -34,6 +34,12 @@
                     <span class="ml-3 item-text">All Books</span>
                 </a>
             </li>
+            <li class="nav-item dropdown {{activeMyBooks}}">
+                <a href="/my-books" class="nav-link">
+                    <i class="fe fe-book fe-16"></i>
+                    <span class="ml-3 item-text">My Books</span>
+                </a>
+            </li>
         </ul>
 
         <div class="btn-box w-100 mt-4 mb-1">
