Add finished books menu item

--- a/views/include/menu.mustache
+++ b/views/include/menu.mustache
@@ -40,6 +40,12 @@
                     <span class="ml-3 item-text">My Books</span>
                 </a>
             </li>
+            <li class="nav-item dropdown {{activeFinished}}">
+                <a href="/books/finished" class="nav-link">
+                    <i class="fe fe-archive fe-16"></i>
+                    <span class="ml-3 item-text">Finished</span>
+                </a>
+            </li>
         </ul>
 
         <div class="btn-box w-100 mt-4 mb-1">
