--- a/views/paths.mustache
+++ b/views/paths.mustache
@@ -81,7 +81,7 @@
                                                             data-id="{{id}}">Add 10 More Days
                                                     </button>
                                                 {{/remaining_day_warning}}
-                                                <a class="btn btn-sm btn-dark" href="/books/{{path_id}}">List</a>
+                                                <a class="btn btn-sm btn-dark" href="/books/paths/{{path_id}}">List</a>
                                             </td>
                                         </tr>
                                     {{/bookPaths}}
