Add insert read progress route and edit the old one

--- a/views/books.mustache
+++ b/views/books.mustache
@@ -115,7 +115,7 @@
                 $.ajax({
                     type: "POST",
                     data: "amount=" + amount + "&pathId=" + pathId,
-                    url: "/books/progress/" + id,
+                    url: "/books/" + id + "/progress",
                     success: function (data, status, xhr) {
                         alert(xhr.responseJSON.message);
                         location.reload();
