Reformat and change placeholder

--- a/views/all-books.mustache
+++ b/views/all-books.mustache
@@ -16,7 +16,8 @@
                         <div class="card shadow">
                             <div class="card-body">
                                 <h5 class="card-title">Add Author</h5>
-                                <input id="author" placeholder="Add new author" type="text" class="form-control">
+                                <input id="author" placeholder="Type new author, press enter" type="text"
+                                       class="form-control">
                             </div>
                         </div>
                     </div>
@@ -46,7 +47,8 @@
                                             <td style="width:30%">
                                                 {{title}}
                                                 {{#add_to_library}}
-                                                    <button type="button" class="btn btn-primary btn-sm float-right btnAddToLibrary"
+                                                    <button type="button"
+                                                            class="btn btn-primary btn-sm float-right btnAddToLibrary"
                                                             data-id="{{id}}">Add
                                                     </button>
                                                 {{/add_to_library}}
