--- a/views/books.mustache
+++ b/views/books.mustache
@@ -15,10 +15,9 @@
                     <div class="card shadow mb-4">
                         <div class="card shadow">
                             <div class="card-body">
-                                <h5 class="card-title">Add New Author</h5>
-                                <div class="input-group input-group-lg">
-                                    <input id="author" placeholder="Add new author" type="text" class="form-control">
-                                </div>
+                                <h5 class="card-title">Add Author</h5>
+                                <input id="author" placeholder="Type new author, press enter" type="text"
+                                       class="form-control">
                             </div>
                         </div>
                     </div>
