--- a/views/my-books.mustache
+++ b/views/my-books.mustache
@@ -16,7 +16,8 @@
                         <div class="card shadow">
                             <div class="card-body">
                                 <h5 class="card-title">Add Author</h5>
-                                <input id="author" placeholder="Add new author" type="text" class="form-control">
+                                <input id="author" placeholder="Type new author, press enter" type="text"
+                                       class="form-control">
                             </div>
                         </div>
                     </div>
