Add add-book-to-path route, model and controller

--- a/views/all-books.mustache
+++ b/views/all-books.mustache
@@ -110,8 +110,8 @@
 
                 $.ajax({
                     type: "POST",
-                    data: "bookId=" + bookId,
-                    url: "/paths/" + pathId + "/books",
+                    data: "pathId=" + pathId,
+                    url: "/books/" + bookId + "/paths",
                     success: function (data, status, xhr) {
                         alert(xhr.responseJSON.message);
                     },
