--- a/views/all-books.mustache
+++ b/views/all-books.mustache
@@ -25,8 +25,12 @@
                     <!-- simple table -->
                     <div class="card shadow mb-4">
                         <div class="card shadow">
+                            <div class="card-header">
+                                <strong class="card-title">All Books</strong>
+<!--                                <a class="float-right small text-muted" href="#!">Create Book</a>-->
+                                <a class="btn btn-sm btn-info float-right" data-toggle="modal" data-target="#bookFormModal">Create Book</a>
+                            </div>
                             <div class="card-body">
-                                <h5 class="card-title">All Books</h5>
                                 <table class="table table-striped table-bordered" id="booksDatatable" width="100%">
                                     <thead>
                                     <tr>
