Remove shadow classes

--- a/views/all-books.mustache
+++ b/views/all-books.mustache
@@ -12,8 +12,8 @@
             <div class="row justify-content-center">
                 <div class="col-12">
 
-                    <div class="card shadow mb-4">
-                        <div class="card shadow">
+                    <div class="card mb-4">
+                        <div class="card">
                             <div class="card-body">
                                 <h5 class="card-title">Add Author</h5>
                                 <input id="author" placeholder="Type new author, press enter" type="text"
@@ -23,8 +23,8 @@
                     </div>
 
                     <!-- simple table -->
-                    <div class="card shadow mb-4">
-                        <div class="card shadow">
+                    <div class="card mb-4">
+                        <div class="card">
                             <div class="card-header">
                                 <strong class="card-title">All Books</strong>
                                 <a class="btn btn-sm btn-info float-right" data-toggle="modal" data-target="#bookFormModal">Create Book</a>
