--- a/views/finished.mustache
+++ b/views/finished.mustache
@@ -13,8 +13,8 @@
                 <div class="col-12">
 
                     <!-- simple table -->
-                    <div class="card shadow mb-4">
-                        <div class="card shadow">
+                    <div class="card mb-4">
+                        <div class="card">
                             <div class="card-body">
                                 <h5 class="card-title">Finished Books</h5>
                                 <table class="table table-striped table-bordered" id="booksDatatable" width="100%">
