--- a/views/books.mustache
+++ b/views/books.mustache
@@ -50,8 +50,8 @@
                     </div>
 
                     <!-- simple table -->
-                    <div class="card shadow mb-4">
-                        <div class="card shadow">
+                    <div class="card mb-4">
+                        <div class="card">
                             <div class="card-body">
 
                             </div>
