--- a/views/my-books.mustache
+++ b/views/my-books.mustache
@@ -12,8 +12,8 @@
             <div class="row justify-content-center">
                 <div class="col-12">
                     <!-- simple table -->
-                    <div class="card shadow mb-4">
-                        <div class="card shadow">
+                    <div class="card mb-4">
+                        <div class="card">
                             <div class="card-body">
                                 <h5 class="card-title">My Books</h5>
                                 <table class="table table-striped table-bordered" id="booksDatatable" width="100%">
