--- a/views/paths.mustache
+++ b/views/paths.mustache
@@ -12,7 +12,7 @@
         <div class="container-fluid">
             <div class="row justify-content-center">
                 <div class="col-12">
-                    <div class="card shadow mb-4">
+                    <div class="card mb-4">
                         <div class="card-header">
                             <strong class="card-title">Create New Path</strong>
                         </div>
@@ -40,8 +40,8 @@
                     </div> <!-- / .card -->
 
                     <!-- simple table -->
-                    <div class="card shadow mb-4">
-                        <div class="card shadow">
+                    <div class="card mb-4">
+                        <div class="card">
                             <div class="card-body">
                                 <h5 class="card-title">Book Paths</h5>
                                 <table class="table table-hover">
