--- a/views/login.mustache
+++ b/views/login.mustache
@@ -9,13 +9,18 @@
         <form class="col-lg-3 col-md-4 col-10 mx-auto text-center" action="/login" method="post">
             <div class="form-group">
                 <label for="username" class="sr-only">Username</label>
-                <input type="text" id="username" name="username" class="form-control form-control-lg" placeholder="Username" autofocus="">
+                <input type="text" id="username" name="username" class="form-control form-control-lg"
+                       placeholder="Username" autofocus="">
             </div>
             <div class="form-group">
                 <label for="password" class="sr-only">Password</label>
-                <input type="password" id="password" name="password" class="form-control form-control-lg" placeholder="Password">
+                <input type="password" id="password" name="password" class="form-control form-control-lg"
+                       placeholder="Password">
             </div>
             <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+            {{^userExist}}
+                <a class="btn btn-lg btn-warning btn-block" href="/register">Register</a>
+            {{/userExist}}
         </form>
     </div>
 </div>
