Add create path route, model, controller

--- a/views/paths.mustache
+++ b/views/paths.mustache
@@ -106,7 +106,7 @@
             $.ajax({
                 type: "POST",
                 data: "pathName=" + pathName + "&pathFinish=" + finishDate,
-                url: "/paths",
+                url: "/books/paths",
                 success: function () {
                     alert("success");
                     location.reload();
