--- a/views/all-books.mustache
+++ b/views/all-books.mustache
@@ -27,7 +27,8 @@
                         <div class="card">
                             <div class="card-header">
                                 <strong class="card-title">All Books</strong>
-                                <a class="btn btn-sm btn-info float-right" data-toggle="modal" data-target="#bookFormModal">Create Book</a>
+                                <a class="btn btn-sm btn-info float-right" data-toggle="modal"
+                                   data-target="#bookFormModal">Create Book</a>
                             </div>
                             <div class="card-body">
                                 <table class="table table-striped table-bordered" id="booksDatatable" width="100%">
@@ -36,9 +37,7 @@
                                         <th>Author</th>
                                         <th>Title</th>
                                         <th>Page</th>
-                                        {{^add_to_library}}
-                                            <th>Added Date</th>
-                                        {{/add_to_library}}
+                                        <th>Added Date</th>
                                         <th>Add a Path</th>
                                         <th>Actions</th>
                                     </tr>
@@ -52,7 +51,7 @@
                                                 {{#add_to_library}}
                                                     <button type="button"
                                                             class="btn btn-primary btn-sm float-right btnAddToLibrary"
-                                                            data-id="{{id}}">Add
+                                                            data-id="{{bookUID}}">Add
                                                     </button>
                                                 {{/add_to_library}}
                                             </td>
@@ -72,15 +71,15 @@
                                                     <div class="dropdown-menu">
                                                         {{#paths}}
                                                             <a class="dropdown-item btnAddBookToPath"
-                                                               data-id="{{path_id}}"
-                                                               data-book="{{id}}">{{path_name}}</a>
+                                                               data-id="{{pathUID}}"
+                                                               data-book="{{bookUID}}">{{path_name}}</a>
                                                         {{/paths}}
                                                     </div>
                                                 </div>
                                             </td>
                                             <td style="width:8%">
                                                 <button type="button" class="btn btn-danger btn-sm btnResetBook"
-                                                        data-id="{{id}}">Reset
+                                                        data-id="{{bookUID}}">Reset
                                                 </button>
                                             </td>
                                         </tr>
@@ -108,13 +107,13 @@
 
             $(".btnAddBookToPath").on('click', function (e) {
 
-                var pathId = $(this).data("id");
-                var bookId = $(this).data("book");
+                var pathUID = $(this).data("id");
+                var bookUID = $(this).data("book");
 
                 $.ajax({
                     type: "POST",
-                    data: "pathId=" + pathId,
-                    url: "/books/" + bookId + "/paths",
+                    data: "pathUID=" + pathUID,
+                    url: "/books/" + bookUID + "/paths",
                     success: function (data, status, xhr) {
                         alert(xhr.responseJSON.message);
                     },
@@ -126,11 +125,11 @@
 
             $(".btnAddToLibrary").on('click', function (e) {
 
-                var id = $(this).data("id");
+                var bookUID = $(this).data("id");
 
                 $.ajax({
                     type: "PUT",
-                    url: "/books/" + id + "/add-to-library",
+                    url: "/books/" + bookUID + "/add-to-library",
                     success: function (data, status, xhr) {
                         alert(xhr.responseJSON.message);
                         location.reload();
@@ -143,11 +142,11 @@
 
             $(".btnResetBook").on('click', function (e) {
 
-                var id = $(this).data("id");
+                var bookUID = $(this).data("id");
 
                 $.ajax({
                     type: "DELETE",
-                    url: "/books/" + id,
+                    url: "/books/" + bookUID,
                     success: function (data, status, xhr) {
                         alert(xhr.responseJSON.message);
                         location.reload();
