Add category page and operations

--- a/views/all-books.mustache
+++ b/views/all-books.mustache
@@ -79,7 +79,7 @@
                                             </td>
                                             <td style="width:8%">
                                                 <button type="button" class="btn btn-danger btn-sm btnResetBook"
-                                                        data-id="{{bookUID}}">Reset
+                                                        data-id="{{bookUID}}"><i class="fe fe-trash fe-16"></i>
                                                 </button>
                                             </td>
                                         </tr>
