--- a/views/include/menu.mustache
+++ b/views/include/menu.mustache
@@ -46,6 +46,12 @@
                     <span class="ml-3 item-text">Finished</span>
                 </a>
             </li>
+            <li class="nav-item dropdown {{activeCategories}}">
+                <a href="/categories" class="nav-link">
+                    <i class="fe fe-layers fe-16"></i>
+                    <span class="ml-3 item-text">Categories</span>
+                </a>
+            </li>
         </ul>
 
         <div class="btn-box w-100 mt-4 mb-1">
