--- a/views/modal/add-book.mustache
+++ b/views/modal/add-book.mustache
@@ -52,8 +52,8 @@
                         </div>
 
                         <div class="form-group">
-                            <label for="subject">Category:</label>
-                            <select id="subject" name="subject" class="form-control">
+                            <label for="category">Category:</label>
+                            <select id="category" name="category" class="form-control">
                                 {{#categories}}
                                     <option value="{{id}}">{{name}}</option>
                                 {{/categories}}
