Add date tracking to home page (css,js files, view changes, model and controller)

--- a/views/include/include.mustache
+++ b/views/include/include.mustache
@@ -6,4 +6,5 @@
 <script src='/js/jquery.stickOnScroll.js'></script>
 <script src="/js/tinycolor-min.js"></script>
 <script src="/js/config.js"></script>
+<script src='/js/daterangepicker.js'></script>
 <script src="/js/apps.js"></script>
