--- a/views/home.mustache
+++ b/views/home.mustache
@@ -12,7 +12,29 @@
             <div class="row justify-content-center">
                 <div class="col-12">
 
+                    <div class="card mb-4">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">Add a date</h5>
+                                <div class="form-group">
+                                    <input type="text" id="name" placeholder="Type a name" class="form-control">
+                                </div>
+
+                                <div class="form-group">
+                                    <input type="text" id="start" class="form-control">
+                                </div>
+
+                                <div class="form-group">
+                                    <button id="btnAddNewDateTracking" class="btn btn-primary mb-2">Add</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                     <h2>Today: {{today}}</h2>
+                    {{#dateTrackings}}
+                        <h2>{{name}}: {{diff}}</h2>
+                    {{/dateTrackings}}
                     <h2>Reading Average: {{readingAverage}} ({{readingTotal}}/{{dayDiff}})</h2>
 
                 </div> <!-- .col-12 -->
@@ -23,6 +45,34 @@
 {{> include}}
 <script>
     $(document).ready(function () {
+
+        $('#start').daterangepicker(
+                {
+                    singleDatePicker: true,
+                    timePicker: false,
+                    showDropdowns: true,
+                    locale: {format: 'MM/DD/YYYY'}
+                });
+
+        $("#btnAddNewDateTracking").on('click', function (e) {
+
+            var name = $('#name').val();
+            var start = $('#start').val();
+
+            $.ajax({
+                type: "POST",
+                data: "name=" + name + "&start=" + start,
+                url: "/datetrackings",
+                success: function () {
+                    alert("success");
+                    location.reload();
+                },
+                error: function () {
+                    alert("error");
+                }
+            });
+
+        });
 
     });
 </script>
