Add bookmark view, routes, model and controller

--- a/views/include/menu.mustache
+++ b/views/include/menu.mustache
@@ -54,6 +54,18 @@
             </li>
         </ul>
 
+        <p class="text-muted nav-heading mt-4 mb-1">
+            <span>Trackings</span>
+        </p>
+        <ul class="navbar-nav flex-fill w-100 mb-2">
+            <li class="nav-item dropdown {{activeBookmarks}}">
+                <a href="/bookmarks" class="nav-link">
+                    <i class="fe fe-bookmark fe-16"></i>
+                    <span class="ml-3 item-text">Bookmarks</span>
+                </a>
+            </li>
+        </ul>
+
         <div class="btn-box w-100 mt-4 mb-1">
             <a href="/logout" class="btn mb-2 btn-danger btn-lg btn-block">
                 <i class="fe fe-log-out fe-12 mr-2"></i><span class="small text">Logout</span>
