Add work trackings view, routes, model and controller

--- a/views/include/menu.mustache
+++ b/views/include/menu.mustache
@@ -64,6 +64,12 @@
                     <span class="ml-3 item-text">Bookmarks</span>
                 </a>
             </li>
+            <li class="nav-item dropdown {{activeTrackings}}">
+                <a href="/trackings" class="nav-link">
+                    <i class="fe fe-navigation fe-16"></i>
+                    <span class="ml-3 item-text">Trackings</span>
+                </a>
+            </li>
         </ul>
 
         <div class="btn-box w-100 mt-4 mb-1">
