Add video working trackings view, routes, model and controller

--- a/views/include/menu.mustache
+++ b/views/include/menu.mustache
@@ -70,6 +70,12 @@
                     <span class="ml-3 item-text">Trackings</span>
                 </a>
             </li>
+            <li class="nav-item dropdown {{activeVideos}}">
+                <a href="/videos" class="nav-link">
+                    <i class="fe fe-video fe-16"></i>
+                    <span class="ml-3 item-text">Videos</span>
+                </a>
+            </li>
         </ul>
 
         <div class="btn-box w-100 mt-4 mb-1">
