Add average identifier text

--- a/views/trackings.mustache
+++ b/views/trackings.mustache
@@ -13,7 +13,7 @@
                 <div class="col-12">
 
                     <h1>Today: <span class="badge badge-secondary">{{today}}</span></h1>
-                    <h2>Working Average: {{average}}</h2>
+                    <h2>Working Average: {{average}} min.</h2>
 
                     <div class="card mb-4">
                         <div class="card">
