Add highlights view, routes, model and controller

--- a/views/include/menu.mustache
+++ b/views/include/menu.mustache
@@ -76,6 +76,12 @@
                     <span class="ml-3 item-text">Videos</span>
                 </a>
             </li>
+            <li class="nav-item dropdown {{activeHighlights}}">
+                <a href="/highlights" class="nav-link">
+                    <i class="fe fe-scissors fe-16"></i>
+                    <span class="ml-3 item-text">Highlights</span>
+                </a>
+            </li>
         </ul>
 
         <div class="btn-box w-100 mt-4 mb-1">
