Add writings view, routes, model and controller

--- a/views/include/menu.mustache
+++ b/views/include/menu.mustache
@@ -82,6 +82,12 @@
                     <span class="ml-3 item-text">Highlights</span>
                 </a>
             </li>
+            <li class="nav-item dropdown {{activeWritings}}">
+                <a href="/writings" class="nav-link">
+                    <i class="fe fe-pen-tool fe-16"></i>
+                    <span class="ml-3 item-text">Writings</span>
+                </a>
+            </li>
         </ul>
 
         <div class="btn-box w-100 mt-4 mb-1">
