Add todos view, routes, model and controller

--- a/views/include/menu.mustache
+++ b/views/include/menu.mustache
@@ -88,6 +88,12 @@
                     <span class="ml-3 item-text">Writings</span>
                 </a>
             </li>
+            <li class="nav-item dropdown {{activeOneListToRuleThemAll}}">
+                <a href="/todos" class="nav-link">
+                    <i class="fe fe-list fe-16"></i>
+                    <span class="ml-3 item-text">TODOs</span>
+                </a>
+            </li>
         </ul>
 
         <div class="btn-box w-100 mt-4 mb-1">
