--- a/views/paths.mustache
+++ b/views/paths.mustache
@@ -38,53 +38,32 @@
                         </div>
                     </div> <!-- / .card -->
 
-                    <!-- simple table -->
-                    <div class="card mb-4">
-                        <div class="card">
-                            <div class="card-body">
-                                <h5 class="card-title">Book Paths</h5>
-                                <table class="table table-hover">
-                                    <thead>
-                                    <tr>
-                                        <th>Path Name</th>
-                                        <th>Start</th>
-                                        <th>Finish</th>
-                                        <th>Day Count</th>
-                                        <th>Remaining Page</th>
-                                        <th>Daily Amount</th>
-                                        <th>Today Processed</th>
-                                        <th>Progress</th>
-                                        <th>Actions</th>
-                                    </tr>
-                                    </thead>
-                                    <tbody>
-                                    {{#bookPaths}}
-                                        <tr>
-                                            <td>{{path_name}}</td>
-                                            <td>{{start}}</td>
-                                            <td>{{finish}}</td>
-                                            <td>{{day_diff}}</td>
-                                            <td>{{remaining_page}}</td>
-                                            <td>{{daily_amount}}</td>
-                                            <td>{{today_processed}}</td>
-                                            <td>
-                                                <span class="text-warning">%{{ratio}}</span>
-                                            </td>
-                                            <td>
-                                                {{#remaining_day_warning}}
-                                                    <button class="btn btn-sm btn-danger btnExtendFinishDate"
-                                                            data-uid="{{pathUID}}">Add 10 More Days
-                                                    </button>
-                                                {{/remaining_day_warning}}
-                                                <a class="btn btn-sm btn-dark" href="/books/paths/{{pathUID}}">List</a>
-                                            </td>
-                                        </tr>
-                                    {{/bookPaths}}
-                                    </tbody>
-                                </table>
+                    <div class="card-columns">
+                        {{#bookPaths}}
+                            <div class="card">
+                                <div class="card-header bg-dark">
+                                    {{path_name}} {{{day_diff_text}}}
+                                    <span class="text-warning float-right">%{{ratio}}</span>
+                                </div>
+                                <div class="card-body">
+                                    <div><strong>Start:</strong> {{start}}</div>
+                                    <div><strong>Finish:</strong> {{finish}}</div>
+                                    <div><strong>Remaining Page</strong>: {{remaining_page}}</div>
+                                    <br>
+                                    <div><strong>{{{today_processed_text}}}</strong></div>
+                                </div>
+                                <div class="card-footer">
+                                    {{#remaining_day_warning}}
+                                        <button class="btn btn-sm btn-danger btnExtendFinishDate"
+                                                data-uid="{{pathUID}}">Add 10 More Days
+                                        </button>
+                                    {{/remaining_day_warning}}
+                                    <a class="btn btn-sm btn-dark" href="/books/paths/{{pathUID}}">Books</a>
+                                </div>
                             </div>
-                        </div>
-                    </div> <!-- simple table -->
+                        {{/bookPaths}}
+                    </div>
+
                 </div> <!-- .col-12 -->
             </div> <!-- .row -->
         </div> <!-- .container-fluid -->
