Add strong and color

--- a/views/paths.mustache
+++ b/views/paths.mustache
@@ -46,8 +46,8 @@
                                     <span class="text-warning float-right">%{{ratio}}</span>
                                 </div>
                                 <div class="card-body">
-                                    <div><strong>Start:</strong> {{start}}</div>
-                                    <div><strong>Finish:</strong> {{finish}}</div>
+                                    <div><span class="text-success">Start:</span> {{start}}</div>
+                                    <div><span class="text-danger">Finish:</span> {{finish}}</div>
                                     <div><strong>Remaining Page</strong>: {{remaining_page}}</div>
                                     <br>
                                     <div><strong>{{{today_processed_text}}}</strong></div>
