Split todos page as todos and all todos

--- a/views/include/menu.mustache
+++ b/views/include/menu.mustache
@@ -88,10 +88,16 @@
                     <span class="ml-3 item-text">Writings</span>
                 </a>
             </li>
-            <li class="nav-item dropdown {{activeOneListToRuleThemAll}}">
+            <li class="nav-item dropdown {{activeTodos}}">
                 <a href="/todos" class="nav-link">
                     <i class="fe fe-list fe-16"></i>
                     <span class="ml-3 item-text">TODOs</span>
+                </a>
+            </li>
+            <li class="nav-item dropdown {{activeOneListToRuleThemAll}}">
+                <a href="/all-todos" class="nav-link">
+                    <i class="fe fe-list fe-16"></i>
+                    <span class="ml-3 item-text">All TODOs</span>
                 </a>
             </li>
         </ul>
