Split todos page as todos and all-todos. Remove reset book feature. Add control to prevent updating done books.

--- a/views/all-books.mustache
+++ b/views/all-books.mustache
@@ -38,8 +38,7 @@
                                         <th>Title</th>
                                         <th>Page</th>
                                         <th>Added Date</th>
-                                        <th>Add a Path</th>
-                                        <th>Actions</th>
+                                        <th>Add to Path</th>
                                     </tr>
                                     </thead>
                                     <tbody>
@@ -76,11 +75,6 @@
                                                         {{/paths}}
                                                     </div>
                                                 </div>
-                                            </td>
-                                            <td style="width:8%">
-                                                <button type="button" class="btn btn-danger btn-sm btnResetBook"
-                                                        data-id="{{bookUID}}"><i class="fe fe-trash fe-16"></i>
-                                                </button>
                                             </td>
                                         </tr>
                                     {{/books}}
