Add new alert plugin

--- a/views/include/include.mustache
+++ b/views/include/include.mustache
@@ -8,3 +8,4 @@
 <script src="/js/config.js"></script>
 <script src='/js/daterangepicker.js'></script>
 <script src="/js/apps.js"></script>
+<script src="/js/jquery-bootstrap-purr.min.js"></script>
